<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="add_habit">Add Habit</string>
    <string name="add_new_habit_title">Add New Habit</string>
    <string name="edit_habit_title">Edit Habit</string>
    <string name="habit_name_hint">Name</string>
    <string name="habit_description_hint">Description</string>
    <string name="habit_times_to_complete_hint">Times to complete</string>
    <string name="habit_frequency_in_days_hint">Frequency in days</string>
    <string name="habit_save_button">Save</string>
    <string name="habit_priority_low">Low</string>
    <string name="habit_priority_medium">Medium</string>
    <string name="habit_priority_high">High</string>
    <string name="habit_priority">Priority: %1$s</string>
    <string name="habit_type_good">Good</string>
    <string name="habit_type_bad">Bad</string>
    <string name="habit_type">Type: %1$s</string>
    <string name="once_in_days">Once in days: %1$s</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="about_this_app">About This App</string>
    <string name="home_drawer_item">Home</string>
    <string name="about_app_drawer_item">About</string>
    <string name="app_version">App Version: %1$s</string>
    <string name="search_habits">Search Habits</string>
    <string name="habit_sort_order_new">Newest First</string>
    <string name="habit_sort_order_old">Oldest First</string>
    <string name="habit_sort_creation_date">Sort by creation date</string>
    <string name="search">Search</string>
    <string name="priority">Priority</string>
    <string name="user_avatar">User Avatar</string>
    <string name="complete">complete</string>
    <string name="youre_breathtaking" translatable="false">You\'re breathtaking!</string>
    <string name="stop_doing_that">Stop doing that</string>
    <string name="can_complete_x_times_more">Can complete %1$s times more</string>
    <string name="should_complete_x_times_more">Should complete %1$s times more</string>

    <string-array name="habit_priorities">
        <item>@string/habit_priority_low</item>
        <item>@string/habit_priority_medium</item>
        <item>@string/habit_priority_high</item>
    </string-array>

    <string-array name="home_screen_view_pager_titles">
        <item>Good</item>
        <item>Bad</item>
    </string-array>

</resources>