<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/BottomSheetStyle"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:focusable="true"
            android:background="@android:color/transparent"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:id="@+id/search_edittext"
            android:hint="@string/search_habits"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <TextView
        android:text="@string/habit_sort_creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/creation_date_sort_radiogroup"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:text="@string/habit_sort_order_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:text="@string/habit_sort_order_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

</LinearLayout>