<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:divider="@drawable/linear_layout_divider"
        android:showDividers="middle"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/habit_name_edittext"
                android:hint="@string/habit_name_hint"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/habit_description_edittext"
                android:hint="@string/habit_description_hint"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/habit_priority_spinner"
            android:entries="@array/habit_priorities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/habit_type_radiogroup"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/habit_priority_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:text="@string/habit_priority_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/habit_timesToComplete_edittext"
                android:inputType="numberPassword"
                android:hint="@string/habit_times_to_complete_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:id="@+id/habit_frequency_edittext"
                android:inputType="numberPassword"
                android:hint="@string/habit_frequency_in_days_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/habit_picked_color_indicator"
                android:background="@color/default_picked_color"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/habit_picked_color_rgb"
                    android:text="RBG"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/habit_picked_color_hsv"
                    android:text="HSV"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/habit_color_picker_linearlayout"
                android:orientation="horizontal"
                android:paddingVertical="25dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/save_button"
            android:text="@string/habit_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>
